[gd_scene load_steps=6 format=3 uid="uid://cp25vmlk0k3ck"]

[ext_resource type="Texture2D" uid="uid://j7h3rx30o7hw" path="res://Assets/UI/DottedLine9Patch.png" id="1_4pbfw"]
[ext_resource type="Script" path="res://Abilities/AbilityDestroy.gd" id="2_2p5aj"]
[ext_resource type="Theme" uid="uid://b6iv3a38m6uhb" path="res://UI.tres" id="3_8pykt"]
[ext_resource type="Texture2D" uid="uid://k6po4d3bukag" path="res://Assets/UI/CraneUI.png" id="3_ds6ux"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pepr0"]
texture = ExtResource("1_4pbfw")
texture_margin_left = 14.0
texture_margin_top = 17.0
texture_margin_right = 18.0
texture_margin_bottom = 16.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="Destroy2" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxTexture_pepr0")
script = ExtResource("2_2p5aj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("3_ds6ux")

[node name="Uses" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("3_8pykt")
text = "0"
horizontal_alignment = 2
vertical_alignment = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
